@@ -1027,8 +1027,6 @@ trace.left25=left 25%
 trace.left2=left 2
 trace.ManageTracks=Manage tracks
 trace.ManageWaypoints=Manage waypoints
-trace.ManualRotation=Manual Rotation
-trace.ManualRotation2=Manual rotation mode
 trace.ManualToNorth=to North
 trace.MapFeatures=Map Features
 trace.MapRotation=Map Rotation
@@ -1391,3 +1389,4 @@ guidiscover.BackgroundDisableAreas=Disable areas when background map is shown
 guidiscover.BackgroundDisableBuildings=Disable buildings when background map is shown
 guidiscover.TMSFCPath=Raster map file cache base path:
 androidlocationinput.ActivateGPS=Please activate GPS in Android's settings
+guidiscover.ManualRotation=Manual Rotation
